# 1024-prediction-market-program

./: .gitignore  Cargo.toml  DESIGN.md  IMPROVEMENT-TRACKER-AUDIT.md  IMPROVEMENT-TRACKER.md  README.md  ROADMAP.md  TODO.md  package-lock.json  prediction_market_v2.json  program-keypair.json
scripts/: activate_market.js  add-pm-to-vault-callers.js  add_authorized_caller.js  admin_operations.js  benchmark_cu.js  cancel_market.js  cancel_order.js  claim_multi_outcome_winnings.js  claim_winnings.js  config.js  create_market.js  create_market_11.js  create_market_for_oracle_test.js  create_market_testnet.js  create_multi_outcome_market.js  deploy_v15.2.sh  e2e_full_test.js  e2e_llm_oracle_test.js  e2e_matcher_test.js  execute_trade.js  finalize_result.js  flag_market.js  full_lifecycle_test.sh  full_matching_test.js  full_test.sh  init_program.js  init_testnet.js  integration_test.js  integration_test_matcher.js  match_burn.js  match_burn_multi.js  match_mint.js  match_mint_multi.js  mint_complete_set.js  mint_multi_outcome_set.js  package-lock.json  package.json  pause_resume_market.js  place_order.js  pnpm-lock.yaml  (+14 more)
scripts/e2e-test/: config.js
src/: cpi.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: package.json  test_initialize.ts
