[package]
name = "prediction-market-program"
version = "0.1.0"
edition = "2021"
description = "1024 Prediction Market Program - Core logic for prediction market trading"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market_program"

[features]
default = []
no-entrypoint = []
test-sbf = []
cpi = ["no-entrypoint"]

[dependencies]
# 保持 Solana 1.18 + Borsh 0.10 稳定版本（链上程序）
# 后端使用手动反序列化兼容 Borsh 0.10 格式
solana-program = "=1.18.26"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3

